--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <ul>
                 <li><a href="/home.html" class="active">Home</a></li>
                 <li><a href="/experienceblack.html" class="active">Experience</a></li>
-                <li><a href="#Meet-me" class="active">Meet Me</a></li>
+                <li><a href="#Meet-me" class="active">Meet Me'</a></li>
                 <li class="dropdown">
                     <a href="#" class="active">Case study</a>
                     <ul class="dropdown-content">
