--- a/experiencewhite.html
+++ b/experiencewhite.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="light-mode">
-            <a href="http://127.0.0.1:5500/experienceblack.html"><img src="/images/Off swtich.svg" alt="Dark mode"></a>
+            <a href="/Design-Portfolio/experienceblack.html"><img src="/images/Off swtich.svg" alt="Dark mode"></a>
         </div>
         <nav>
             <svg class="close" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -19,16 +19,16 @@
             <path d="M20 10L10 20M10 10L20 20" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
             </svg>
             <ul>
-                <li><a href="http://127.0.0.1:5500/homewhite.html" class="active">Home</a></li>
-                <li><a href="http://127.0.0.1:5500/experiencewhite.html" class="active">Experience</a></li>
-                <li><a href="http://127.0.0.1:5500/homewhite.html#Meet-me" class="active">Meet Me</a></li>
+                <li><a href="/Design-Portfolio/homewhite.html" class="active">Home</a></li>
+                <li><a href="/Design-Portfolio/experiencewhite.html" class="active">Experience</a></li>
+                <li><a href="/Design-Portfolio/homewhite.html#Meet-me" class="active">Meet Me</a></li>
                 <li class="dropdown">
                     <a href="#" class="active">Case study</a>
                     <ul class="dropdown-content">
-                        <li><a href="http://127.0.0.1:5500/e-comwhite.html">MYA Ecommerce</a></li>
-                        <li><a href="http://127.0.0.1:5500/magentawhite.html">Magenta</a></li>
-                        <li><a href="http://127.0.0.1:5500/realestwhite.html">Real Estate by Home</a></li>
-                        <li><a href="http://127.0.0.1:5500/wyrewhite.html">Wyre Smart Energy System</a></li>
+                        <li><a href="/Design-Portfolio/e-comwhite.html">MYA Ecommerce</a></li>
+                        <li><a href="/Design-Portfolio/magentawhite.html">Magenta</a></li>
+                        <li><a href="/Design-Portfolio/realestwhite.html">Real Estate by Home</a></li>
+                        <li><a href="/Design-Portfolio/wyrewhite.html">Wyre Smart Energy System</a></li>
                     </ul>
                 </li>
                 <li><a href="#" class="primary-cta">Contact</a></li>
@@ -113,8 +113,8 @@
             <div class="second-part">
                 <p class="F-txt">Links</p>
                 <div class="T-wrapper">
-                    <a href="http://127.0.0.1:5500/home.html"><p>Home</p></a>
-                    <a href="http://127.0.0.1:5500/experienceblack.html"><p>Experience</p></a>
+                    <a href="/Design-Portfolio/home.html"><p>Home</p></a>
+                    <a href="/Design-Portfolio/experienceblack.html"><p>Experience</p></a>
                     <p>About</p>
                     <p>Gallery</p>
                 </div>
@@ -131,10 +131,10 @@
             <div class="fourth-part">
                 <p class="F-txt">Projects</p>
                 <div class="T-wrapper">
-                    <a href="http://127.0.0.1:5500/e-comwhite.html"><p>Ecommerce</p></a>
-                    <a href="http://127.0.0.1:5500/magentawhite.html"><p>Magenta Dashboard</p></a>
-                    <a href="http://127.0.0.1:5500/realestwhite.html"><p>Eco-friendly Home by Home </p></a>
-                    <a href="http://127.0.0.1:5500/wyrewhite.html"><p>Wyre Smart Energy System</p></a>
+                    <a href="/Design-Portfolio/e-comwhite.html"><p>Ecommerce</p></a>
+                    <a href="/Design-Portfolio/magentawhite.html"><p>Magenta Dashboard</p></a>
+                    <a href="/Design-Portfolio/realestwhite.html"><p>Eco-friendly Home by Home </p></a>
+                    <a href="/Design-Portfolio/wyrewhite.html"><p>Wyre Smart Energy System</p></a>
                 </div>
             </div>
             <div class="fifth-part">
