name changed to design

--- a/experienceblack.html
+++ b/experienceblack.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="dark-mode">
-            <a href="/Design-Portfolio/experiencewhite.html"><img src="/images/On.svg" alt="Dark mode"></a>
+            <a href="/Design/experiencewhite.html"><img src="/images/On.svg" alt="Dark mode"></a>
         </div>
         <nav>
             <svg class="close" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -19,16 +19,16 @@
                 <path d="M20 10L10 20M10 10L20 20" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
             </svg>
             <ul>
-                <li><a href="/Design-Portfolio/home.html" class="active">Home</a></li>
-                <li><a href="/Design-Portfolio/experienceblack.html" class="active">Experience</a></li>
-                <li><a href="/Design-Portfolio/home.html#Meet-me" class="active">Meet Me</a></li>
+                <li><a href="/Design/home.html" class="active">Home</a></li>
+                <li><a href="/Design/experienceblack.html" class="active">Experience</a></li>
+                <li><a href="/Design/home.html#Meet-me" class="active">Meet Me</a></li>
                 <li class="dropdown">
                     <a href="#" class="active">Case study</a>
                     <ul class="dropdown-content">
-                        <li><a href="/Design-Portfolio/e-com.html">Ecommerce</a></li>
-                        <li><a href="/Design-Portfolio/magenta.html">Magenta Dashboard</a></li>
-                        <li><a href="/Design-Portfolio/realest.html">Eco-friendly Home by Home</a></li>
-                        <li><a href="/Design-Portfolio/Wyre.html">Wyre Smart Energy System</a></li>
+                        <li><a href="/Design/e-com.html">Ecommerce</a></li>
+                        <li><a href="/Design/magenta.html">Magenta Dashboard</a></li>
+                        <li><a href="/Design/realest.html">Eco-friendly Home by Home</a></li>
+                        <li><a href="/Design/Wyre.html">Wyre Smart Energy System</a></li>
                     </ul>
                 </li>
                 <li><a href="#" class="primary-cta">Contact</a></li>
@@ -113,8 +113,8 @@
             <div class="second-part">
                 <p class="F-txt">Links</p>
                 <div class="T-wrapper">
-                    <a href="/Design-Portfolio/home.html"><p>Home</p></a>
-                    <a href="/Design-Portfolio/experienceblack.html"><p>Experience</p></a>
+                    <a href="/Design/home.html"><p>Home</p></a>
+                    <a href="/Design/experienceblack.html"><p>Experience</p></a>
                     <p>About</p>
                     <p>Gallery</p>
                 </div>
@@ -131,10 +131,10 @@
             <div class="fourth-part">
                 <p class="F-txt">Projects</p>
                 <div class="T-wrapper">
-                    <a href="/Design-Portfolio/e-com.html"><p>Ecommerce</p></a>
-                    <a href="/Design-Portfolio/magenta.html"><p>Magenta Dashboard</p></a>
-                    <a href="/Design-Portfolio/realest.html"><p>Eco-friendly Home by Home </p></a>
-                    <a href="/Design-Portfolio/Wyre.html"><p>Wyre Smart Energy System</p></a> 
+                    <a href="/Design/e-com.html"><p>Ecommerce</p></a>
+                    <a href="/Design/magenta.html"><p>Magenta Dashboard</p></a>
+                    <a href="/Design/realest.html"><p>Eco-friendly Home by Home </p></a>
+                    <a href="/Design/Wyre.html"><p>Wyre Smart Energy System</p></a> 
                 </div>
             </div>
             <div class="fifth-part">
