--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <div class="dark-mode">
-            <a href="/Design-Portfolio/homewhite.html"><img src="/images/On.svg" alt="Dark mode"></a>
+            <a href="/Design/homewhite.html"><img src="/images/On.svg" alt="Dark mode"></a>
         </div>
         <nav>
             <svg class="close" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -22,16 +22,16 @@
                 <path d="M20 10L10 20M10 10L20 20" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
             </svg>
             <ul>
-                <li><a href="/Design-Portfolio/home.html" class="active">Home</a></li>
-                <li><a href="/Design-Portfolio/experienceblack.html" class="active">Experience</a></li>
+                <li><a href="/Design/home.html" class="active">Home</a></li>
+                <li><a href="/Design/experienceblack.html" class="active">Experience</a></li>
                 <li><a href="#Meet-me" class="active">Meet Me'</a></li>
                 <li class="dropdown">
                     <a href="#" class="active">Case study</a>
                     <ul class="dropdown-content">
-                        <li><a href="/Design-Portfolio/e-com.html">Ecommerce</a></li>
-                        <li><a href="/Design-Portfolio/magenta.html">Magenta Dashboard</a></li>
-                        <li><a href="/Design-Portfolio/realest.html">Eco-friendly Home by Home</a></li>
-                        <li><a href="/Design-Portfolio/Wyre.html">Wyre Smart Energy System</a></li>
+                        <li><a href="/Design/e-com.html">Ecommerce</a></li>
+                        <li><a href="/Design/magenta.html">Magenta Dashboard</a></li>
+                        <li><a href="/Design/realest.html">Eco-friendly Home by Home</a></li>
+                        <li><a href="/Design/Wyre.html">Wyre Smart Energy System</a></li>
                     </ul>
                 </li>
                 <li><a href="#" class="primary-cta">Contact</a></li>
@@ -394,12 +394,12 @@
     <section class="project">
         <p class="h-h1-text">Case Study</p>
         <div class="project-cards">
-            <a href="/Design-Portfolio/realest.html"><img src="/images/Home img.svg" alt="Housing"></a>
-            <a href="/Design-Portfolio/magenta.html"><img src="/images/Magenta img.svg" alt="Magenta"></a>
-            <a href="/Design-Portfolio/e-com.html"><img src="/images/MYA img.svg" alt="MYA"></a>
+            <a href="/Design/realest.html"><img src="/images/Home img.svg" alt="Housing"></a>
+            <a href="/Design/magenta.html"><img src="/images/Magenta img.svg" alt="Magenta"></a>
+            <a href="/Design/e-com.html"><img src="/images/MYA img.svg" alt="MYA"></a>
         </div>
         <div class="project-cards2">
-            <a href="/Design-Portfolio/Wyre.html"><img src="/images/wyre img.svg" alt="wyre"></a>
+            <a href="/Design/Wyre.html"><img src="/images/wyre img.svg" alt="wyre"></a>
             <a href="#"><img src="/images/Eventlixt img.svg" alt="eventlixt"></a>
         </div>
     </section>
@@ -513,8 +513,8 @@
             <div class="second-part">
                 <p class="F-txt">Links</p>
                 <div class="T-wrapper">
-                    <a href="/Design-Portfolio/home.html"><p>Home</p></a>
-                    <a href="/Design-Portfolio/experienceblack.html"><p>Experience</p></a>
+                    <a href="/Design/home.html"><p>Home</p></a>
+                    <a href="/Design/experienceblack.html"><p>Experience</p></a>
                     <p>About</p>
                     <p>Gallery</p>
                 </div>
@@ -531,10 +531,10 @@
             <div class="fourth-part">
                 <p class="F-txt">Projects</p>
                 <div class="T-wrapper">
-                    <a href="/Design-Portfolio/e-com.html"><p>Ecommerce</p></a>
-                    <a href="/Design-Portfolio/magenta.html"><p>Magenta Dashboard</p></a>
-                    <a href="/Design-Portfolio/realest.html"><p>Eco-friendly Home by Home </p></a>
-                    <a href="/Design-Portfolio/Wyre.html"><p>Wyre Smart Energy System</p></a> 
+                    <a href="/Design/e-com.html"><p>Ecommerce</p></a>
+                    <a href="/Design/magenta.html"><p>Magenta Dashboard</p></a>
+                    <a href="/Design/realest.html"><p>Eco-friendly Home by Home </p></a>
+                    <a href="/Design/Wyre.html"><p>Wyre Smart Energy System</p></a> 
                 </div>
             </div>
             <div class="fifth-part">
