--- a/index.html
+++ b/index.html
@@ -283,11 +283,11 @@
         <div class="services-cards">
             <div class="cardser"><img src="/images/sevice Card1.png" width="265" height="250" alt="Description of the image">
             </div>
-            <div class="cardser"><img src="images/sevice Card2.png" width="265" height="250" alt="">
+            <div class="cardser"><img src="/images/sevice Card2.png" width="265" height="250" alt="">
             </div>
-            <div class="cardser"><img src="images/sevice Card3.png" width="265" height="250" alt="">
+            <div class="cardser"><img src="/images/sevice Card3.png" width="265" height="250" alt="">
             </div>
-            <div class="cardser"><img src="images/sevice Card4.png" width="265" height="250" alt="">
+            <div class="cardser"><img src="/images/sevice Card4.png" width="265" height="250" alt="">
             </div>
         </div>
     </section>
