--- a/index.html
+++ b/index.html
@@ -277,30 +277,30 @@
     <section class="services-offered">
         <div class="clients">
             <h4 class="clientstxt">Trusted by leading brands</h4>
-            <img src="/images/client (black bakg).png" alt="">   
+            <img src="images/client (black bakg).png" alt="">   
         </div>
         <p class="services">UI/UX Services Offered</p>
         <div class="services-cards">
-            <div class="cardser"><img src="/images/sevice Card1.png" width="265" height="250" alt="Description of the image">
+            <div class="cardser"><img src="images/sevice Card1.png" width="265" height="250" alt="Description of the image">
             </div>
-            <div class="cardser"><img src="/images/sevice Card2.png" width="265" height="250" alt="">
+            <div class="cardser"><img src="images/sevice Card2.png" width="265" height="250" alt="">
             </div>
-            <div class="cardser"><img src="/images/sevice Card3.png" width="265" height="250" alt="">
+            <div class="cardser"><img src="images/sevice Card3.png" width="265" height="250" alt="">
             </div>
-            <div class="cardser"><img src="/images/sevice Card4.png" width="265" height="250" alt="">
+            <div class="cardser"><img src="images/sevice Card4.png" width="265" height="250" alt="">
             </div>
         </div>
     </section>
     <section class="project">
         <p class="h-h1-text">Case Study</p>
         <div class="project-cards">
-            <a href="http://127.0.0.1:5500/realest.html"><img src="/images/Home img.png" width="348" height="480" alt="Housing"></a>
-            <a href="http://127.0.0.1:5500/magenta.html"><img src="/images/Magenta img.png" width="348" height="480" alt="Magenta"></a>
-            <a href="http://127.0.0.1:5500/e-com.html"><img src="/images/MYA img.png" width="348" height="480" alt="MYA"></a>
+            <a href="http://127.0.0.1:5500/realest.html"><img src="images/Home img.png" width="348" height="480" alt="Housing"></a>
+            <a href="http://127.0.0.1:5500/magenta.html"><img src="images/Magenta img.png" width="348" height="480" alt="Magenta"></a>
+            <a href="http://127.0.0.1:5500/e-com.html"><img src="images/MYA img.png" width="348" height="480" alt="MYA"></a>
         </div>
         <div class="project-cards2">
-            <a href="http://127.0.0.1:5500/Wyre.html"><img src="/images/wyre img.png"  width="348" height="480" alt="wyre"></a>
-            <a href="#"><img src="/images/Eventlixt img.png"  width="348" height="480" alt="eventlixt"></a>
+            <a href="http://127.0.0.1:5500/Wyre.html"><img src="images/wyre img.png"  width="348" height="480" alt="wyre"></a>
+            <a href="#"><img src="images/Eventlixt img.png"  width="348" height="480" alt="eventlixt"></a>
         </div>
     </section>
     <section id="Meet-me">
@@ -368,26 +368,26 @@
         <div class="design-tool">
             <p class="icontxt">Design Tools</p>
             <div class="icons">
-                <div class="figma"><img src="/images/f19m@.png" width="62em" alt="figma"></div>
-                <div class="Xd"><img src="/images/Xd.png" width="62em" alt="Xd"></div>
-                <div class="canva"><img src="/images/Canva.png" width="62em" alt="Canva"></div>
+                <div class="figma"><img src="images/f19m@.png" width="62em" alt="figma"></div>
+                <div class="Xd"><img src="images/Xd.png" width="62em" alt="Xd"></div>
+                <div class="canva"><img src="images/Canva.png" width="62em" alt="Canva"></div>
             </div>
         </div>
         <div class="collaboration-tools">
             <p class="icontxt">Collaboration Tools</p>
             <div class="icons">
-                <div class="figma"><img src="/images/miro.png" width="62em" alt="Miro"></div>
-                <div class="Xd"><img src="/images/clickup.png" width="62em" alt="Clickup"></div>
-                <div class="canva"><img src="/images/slack.png" width="62em" alt="Slack"></div>
+                <div class="figma"><img src="images/miro.png" width="62em" alt="Miro"></div>
+                <div class="Xd"><img src="images/clickup.png" width="62em" alt="Clickup"></div>
+                <div class="canva"><img src="images/slack.png" width="62em" alt="Slack"></div>
             </div>
         </div>
         <div class="developer-tools">
             <p class="icontxt">Developer Tools</p>
             <div class="icons">
-                <div class="figma"><img src="/images/git.png" width="62em" alt="Git"></div>
-                <div class="Xd"><img src="/images/vscode.png" width="62em" alt="Vs code"></div>
-                <div class="canva"><img src="/images/webflow.png" width="62em" alt="Webflow"></div>
-                 <div class="editorX"><img src="/images/editorx.png" width="62em" alt="EditorX"></div>
+                <div class="figma"><img src="images/git.png" width="62em" alt="Git"></div>
+                <div class="Xd"><img src="images/vscode.png" width="62em" alt="Vs code"></div>
+                <div class="canva"><img src="images/webflow.png" width="62em" alt="Webflow"></div>
+                 <div class="editorX"><img src="images/editorx.png" width="62em" alt="EditorX"></div>
             </div> 
         </div>
     </section>
