profile image changed

--- a/magenta.html
+++ b/magenta.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="dark-mode">
-            <a href="/Design/magentawhite.html"><img src="/images/On.svg" alt="Dark mode"></a>
+            <a href="/Design/magentawhite.html"><img src="images/On.svg" alt="Dark mode"></a>
         </div>
         <nav>
             <svg class="close" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -48,7 +48,7 @@
                 track business</p>
                 <p class="H1body">performance, by making a lifestyle application.</p>
         </div>
-        <div class="Heroimg"><img src="/images/Black Fame mobile hero.svg" alt="Hero Image"></div>
+        <div class="Heroimg"><img src=images/Black Fame mobile hero.svg" alt="Hero Image"></div>
     </section>
     <section class="blacktext">
         <div class="service">
@@ -112,12 +112,12 @@
         </div>
          
         <div class="right">
-            <img src="/images/Desktop magenta casher.svg" alt="">
+            <img src=images/Desktop magenta casher.svg" alt="">
         </div>
     </section>
     <section class="admin">
         <div class="left">
-            <img src="/images/Magenta admin tab.svg" alt="">
+            <img src=images/Magenta admin tab.svg" alt="">
         </div>
         <div class="right">
             <div class="casher">
@@ -170,7 +170,7 @@
         </div>
          
         <div class="right">
-            <img src="/images/hand holding phone.svg" alt="">
+            <img src=images/hand holding phone.svg" alt="">
         </div>
     </section>
     <section class="Problem-Statement">
@@ -187,35 +187,35 @@
         </div>
         <div class="process-cards">
             <div class="empathise">
-                <img src="/images/Empathy.svg" alt="">
+                <img src="images/Empathy.svg" alt="">
                 <div class="empathisetext">
                    <p class="maintext">Empathise</p>
                    <p class="bodytxt14">Understanding the product users and what they need and their expectations about a payment application. </p>
                 </div>
             </div>
             <div class="Define">
-                <img src="/images/Define.svg" alt="">
+                <img src="images/Define.svg" alt="">
                 <div class="Definetext">
                    <p class="maintext">Define</p>
                    <p class="bodytxt14">Understanding the product users and what they need and their expectations about a payment application.</p>
                 </div>
             </div>
             <div class="Ideate">
-                <img src="/images/Ideate.svg" alt="">
+                <img src="images/Ideate.svg" alt="">
                 <div class="Ideatetext">
                    <p class="maintext">Ideate</p>
                    <p class="bodytxt14">Understanding the product users and what they need and their expectations about a payment application. </p>
                 </div>
             </div>
             <div class="Prototype">
-                <img src="/images/Prototype.svg" alt="">
+                <img src="images/Prototype.svg" alt="">
                 <div class="Prototypetext">
                    <p class="maintext">Prototype</p>
                    <p class="bodytxt14">Understanding the product users and what they need and their expectations about a payment application. </p>
                 </div>
             </div>
             <div class="Test">
-                <img src="/images/Test.svg" alt="">
+                <img src="images/Test.svg" alt="">
                 <div class="testtext">
                    <p class="maintext">Test</p>
                    <p class="bodytxt14">Understanding the product users and what they need and their expectations about a payment application. </p>
@@ -239,7 +239,7 @@
             </ul> 
         </div>
         <div class="right">
-            <img src="/images/Stragetgy mobileimage.svg" alt="">
+            <img src=images/Stragetgy mobileimage.svg" alt="">
         </div>
     </section>
     <section class="Unique-features">
@@ -248,7 +248,7 @@
             <p class="bodytxt20">Ease of payments, less delay, expense history and organization, access
                 to payment in an issuer or formfactor agnostic fashion</p>
         </div>
-        <img src="/images/magenta unique features grid.svg" alt="">
+        <img srcimages/magenta unique features grid.svg" alt="">
     </section>
     <section class="research">
         <div class="Left">
@@ -266,7 +266,7 @@
             </ul> 
         </div>
         <div class="right">
-            <img src="/images/Important note.svg" alt="">
+            <img src=images/Important note.svg" alt="">
         </div>
     </section>
     <section class="competitive-analysis">
@@ -277,21 +277,21 @@
             satisfying a larger scale of user needs, and standing out with a unique feature.</p>
         </div>
         <div class="competitivecards">
-            <img src="/images/Vetropay.svg" alt="">
-            <img src="/images/Tally.svg" alt="">
+            <img src=images/Vetropay.svg" alt="">
+            <img src=images/Tally.svg" alt="">
         </div>
     </section>
     <section class="mobile-screens">
         <div class="owners">
             <h3 class="maintxt">Business Owners Onboarding</h3>
             <div class="screens">
-                <img src="/images/Mobile set owners.svg" alt="">
+                <img src="images/Mobile set owners.svg" alt="">
             </div>
         </div>
         <div class="payment">
             <h3 class="maintxt">Receiving Payment Options</h3>
             <div class="screens">
-                <img src="/images/Mobile set for payment.svg" alt="">
+                <img src="images/Mobile set for payment.svg" alt="">
             </div>
         </div>
     </section>
@@ -299,18 +299,20 @@
         <h1 class="header">Style Guide</h1>
         <div class="color-palette">
             <h3 class="maintxt">Color palette</h3>
-            <div class="colorpalette"><img src="/images/magenta Brand Color.svg" alt=""></div>
+            <div class="colorpalette"><img src="images/magenta Brand Color.svg" alt=""></div>
         </div>
         <div class="typography">
             <h3 class="maintxt">Typography</h3>
-            <div class="font"><img src="/images/Magenta typography font.svg" alt=""></div>
-            <div class="fontweight"><img src="/images/Magenta typography weight.svg" alt=""></div>
+            <div class="font"><img src="images/Magenta typography font.svg" alt=""></div>
+            <div class="fontweight"><img src="images/Magenta typography weight.svg" alt=""></div>
         </div>
         <div class="Icon">
             <h3 class="maintxt">Iconography</h3>
             <div class="iconwrap">
-                <div class="font"><p class="outline">Outline</p><img src="/images/Outline icon.svg" alt=""></div>
-                <div class="fontweight"><p class="bold">Bold</p><img src="/images/Bold icon.svg" alt=""></div>
+                <div class="font"><p class="outline">Outline</p><img src="
+images/Outline icon.svg" alt=""></div>
+                <div class="fontweight"><p class="bold">Bold</p><img src="
+images/Bold icon.svg" alt=""></div>
             </div>      
         </div>
     </section>
