--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
                     </div>
                 </div>
                 <div class="h-right-content">
-                    <div class="image"><img src="images/nicoleimg.png" alt="Me"></div>
+                    <div class="image"><img src="images/IMG_7085.jpg" alt="Me"></div>
                     <div class="mail-address">
                         <p class="mail">Nicoleeferigho@gmail.com</p>
                         <p class="location">Lagos, Nigeria</p>
