--- a/homewhite.html
+++ b/homewhite.html
@@ -11,7 +11,44 @@
 <body>
     <header>
         <div class="light-mode">
-            <a href="/Design/home.html"><img src="/images/Off swtich.svg" alt="Dark mode"></a>
+            <a href="/Design/home.html">
+                <svg width="58" height="36" viewBox="0 0 58 36" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <rect x="2" width="56" height="32" rx="16" fill="#0A0A0A"/>
+                <g filter="url(#filter0_ddd_969_13901)">
+                <rect x="4" y="2" width="28" height="28" rx="14" fill="white"/>
+                </g>
+                <circle cx="18" cy="16" r="5" stroke="#0A0A0A" stroke-width="1.5"/>
+                <path d="M18 23.5V26" stroke="#0A0A0A" stroke-width="1.5" stroke-linecap="round"/>
+                <path d="M18 6V8.5" stroke="#0A0A0A" stroke-width="1.5" stroke-linecap="round"/>
+                <path d="M10.5 16L8 16" stroke="#0A0A0A" stroke-width="1.5" stroke-linecap="round"/>
+                <path d="M28 16L25.5 16" stroke="#0A0A0A" stroke-width="1.5" stroke-linecap="round"/>
+                <path d="M23.3027 10.6967L25.0705 8.92889" stroke="#0A0A0A" stroke-width="1.5" stroke-linecap="round"/>
+                <path d="M10.9287 23.071L12.6965 21.3033" stroke="#0A0A0A" stroke-width="1.5" stroke-linecap="round"/>
+                <path d="M23.3027 21.3033L25.0705 23.0711" stroke="#0A0A0A" stroke-width="1.5" stroke-linecap="round"/>
+                <path d="M10.9287 8.92889L12.6965 10.6967" stroke="#0A0A0A" stroke-width="1.5" stroke-linecap="round"/>
+                <defs>
+                <filter id="filter0_ddd_969_13901" x="0" y="0" width="36" height="36" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                <feFlood flood-opacity="0" result="BackgroundImageFix"/>
+                <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"/>
+                <feOffset dy="1"/>
+                <feGaussianBlur stdDeviation="1.5"/>
+                <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.1 0"/>
+                <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_969_13901"/>
+                <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"/>
+                <feOffset dy="1"/>
+                <feGaussianBlur stdDeviation="1"/>
+                <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.1 0"/>
+                <feBlend mode="normal" in2="effect1_dropShadow_969_13901" result="effect2_dropShadow_969_13901"/>
+                <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"/>
+                <feOffset dy="2"/>
+                <feGaussianBlur stdDeviation="2"/>
+                <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.1 0"/>
+                <feBlend mode="normal" in2="effect2_dropShadow_969_13901" result="effect3_dropShadow_969_13901"/>
+                <feBlend mode="normal" in="SourceGraphic" in2="effect3_dropShadow_969_13901" result="shape"/>
+                </filter>
+                </defs>
+                </svg>
+            </a>
         </div>
         <nav>
             <svg class="close" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -391,13 +428,13 @@
         <section class="project">
             <p class="h-h1-text">Case Study</p>
             <div class="project-cards">
-                <a href="/Design/realestwhite.html"><img src="/images/Home.svg" alt="E-commerce"></a>
-                <a href="/Design/magentawhite.html"><img src="/images/magenta.svg" alt="Magenta"></a>
-                <a href="/Design/e-comwhite.html"><img src="/images/MYA.svg" alt="housing"></a>
+                <a href="/Design/realestwhite.html"><img src="images/Home.png" alt="E-commerce"></a>
+                <a href="/Design/magentawhite.html"><img src="images/Magenta.png" alt="Magenta"></a>
+                <a href="/Design/e-comwhite.html"><img src="images/MYA.png" alt="housing"></a>
             </div>
             <div class="project-cards2">
-                <a href="/Design/wyrewhite.html"><img src="/images/wyre.svg" alt="wyre"></a>
-                <a href="#"><img src="/images/Eventlixt.svg" alt="eventlixt"></a>
+                <a href="/Design/wyrewhite.html"><img src="images/wyre.png" alt="wyre"></a>
+                <a href="#"><img src="images/Eventlixt.pngg" alt="eventlixt"></a>
             </div>
         </section>
          <section id="Meet-me">
@@ -431,7 +468,7 @@
                         </div>
                     </div>
                     <div class="h-right-content">
-                        <div class="image"><img src="/images/nicoleimg.svg" alt="Me"></div>
+                        <div class="image"><img src="images/profile.jpg" alt="Me"></div>
                         <div class="mail-address">
                             <p class="mail">Nicoleeferigho@gmail.com</p>
                             <p class="location">Lagos,Nigeria</p>
@@ -459,26 +496,26 @@
            <div class="design-tool">
                <p class="icontxt">Design Tools</p>
                <div class="icons">
-                   <div class="figma"><img src="/images/f19m@.svg" alt="figma"></div>
-                   <div class="Xd"><img src="/images/Xd.svg" alt="Xd"></div>
-                   <div class="canva"><img src="/images/Canva.svg" alt="Canva"></div>
+                   <div class="figma"><img src="images/f19m@.png" alt="figma"></div>
+                   <div class="Xd"><img src="images/Xd.png" alt="Xd"></div>
+                   <div class="canva"><img src="images/Canva.png" alt="Canva"></div>
                 </div>
             </div>
             <div class="collaboration-tools">
                 <p class="icontxt">Collaboration Tools</p>
                 <div class="icons">
-                    <div class="figma"><img src="/images/miro.svg" alt="Miro"></div>
-                    <div class="Xd"><img src="/images/clickup.svg" alt="Clickup"></div>
-                    <div class="canva"><img src="/images/slack.svg" alt="Slack"></div>
+                    <div class="figma"><img src="images/miro.png" alt="Miro"></div>
+                    <div class="Xd"><img src="images/clickup.png" alt="Clickup"></div>
+                    <div class="canva"><img src="images/slack.png" alt="Slack"></div>
                 </div>
             </div>
             <div class="developer-tools">
                 <p class="icontxt">Developer Tools</p>
                 <div class="icons">
-                    <div class="figma"><img src="/images/git.svg" alt="Git"></div>
-                    <div class="Xd"><img src="/images/vscode.svg" alt="Vs code"></div>
-                    <div class="canva"><img src="/images/webflow.svg" alt="Webflow"></div>
-                    <div class="editorX"><img src="/images/editorx.svg" alt="EditorX"></div>
+                    <div class="figma"><img src="images/git.png" alt="Git"></div>
+                    <div class="Xd"><img src="images/vscode.png" alt="Vs code"></div>
+                    <div class="canva"><img src="images/webflow.png" alt="Webflow"></div>
+                    <div class="editorX"><img src="images/editorx.png" alt="EditorX"></div>
                 </div> 
             </div>      
         </div>
