--- a/homewhite.html
+++ b/homewhite.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="light-mode">
-            <a href="/Design/">
+            <a href="/Design/index.html">
                 <svg width="58" height="36" viewBox="0 0 58 36" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <rect x="2" width="56" height="32" rx="16" fill="#0A0A0A"/>
                 <g filter="url(#filter0_ddd_969_13901)">
