--- a/homewhite.html
+++ b/homewhite.html
@@ -428,13 +428,13 @@
         <section class="project">
             <p class="h-h1-text">Case Study</p>
             <div class="project-cards">
-                <a href="/Design/realestwhite.html"><img src="images/Home.png" alt="E-commerce"></a>
-                <a href="/Design/magentawhite.html"><img src="images/Magenta.png" alt="Magenta"></a>
-                <a href="/Design/e-comwhite.html"><img src="images/MYA.png" alt="housing"></a>
+                <a href="/Design/realestwhite.html"><img src="images/Home.png" width="348" height="480" alt="E-commerce"></a>
+                <a href="/Design/magentawhite.html"><img src="images/Magenta.png" width="348" height="480" alt="Magenta"></a>
+                <a href="/Design/e-comwhite.html"><img src="images/MYA.png" width="348" height="480" alt="housing"></a>
             </div>
             <div class="project-cards2">
-                <a href="/Design/wyrewhite.html"><img src="images/wyre.png" alt="wyre"></a>
-                <a href="#"><img src="images/Eventlixt.pngg" alt="eventlixt"></a>
+                <a href="/Design/wyrewhite.html"><img src="images/wyre.png" width="348" height="480" alt="wyre"></a>
+                <a href="#"><img src="images/Eventlixt.png" width="348" height="480" alt="eventlixt"></a>
             </div>
         </section>
          <section id="Meet-me">
@@ -468,7 +468,7 @@
                         </div>
                     </div>
                     <div class="h-right-content">
-                        <div class="image"><img src="images/profile.jpg" alt="Me"></div>
+                        <div class="image"><img src="images/profile.jpg" width="300" height="280" alt="Me"></div>
                         <div class="mail-address">
                             <p class="mail">Nicoleeferigho@gmail.com</p>
                             <p class="location">Lagos,Nigeria</p>
@@ -496,26 +496,26 @@
            <div class="design-tool">
                <p class="icontxt">Design Tools</p>
                <div class="icons">
-                   <div class="figma"><img src="images/f19m@.png" alt="figma"></div>
-                   <div class="Xd"><img src="images/Xd.png" alt="Xd"></div>
-                   <div class="canva"><img src="images/Canva.png" alt="Canva"></div>
+                   <div class="figma"><img src="images/f19m@.png" width="62em" alt="figma"></div>
+                   <div class="Xd"><img src="images/Xd.png" width="62em" alt="Xd"></div>
+                   <div class="canva"><img src="images/Canva.png" width="62em" alt="Canva"></div>
                 </div>
             </div>
             <div class="collaboration-tools">
                 <p class="icontxt">Collaboration Tools</p>
                 <div class="icons">
-                    <div class="figma"><img src="images/miro.png" alt="Miro"></div>
-                    <div class="Xd"><img src="images/clickup.png" alt="Clickup"></div>
-                    <div class="canva"><img src="images/slack.png" alt="Slack"></div>
+                    <div class="figma"><img src="images/miro.png" width="62em" alt="Miro"></div>
+                    <div class="Xd"><img src="images/clickup.png" width="62em" alt="Clickup"></div>
+                    <div class="canva"><img src="images/slack.png" width="62em" alt="Slack"></div>
                 </div>
             </div>
             <div class="developer-tools">
                 <p class="icontxt">Developer Tools</p>
                 <div class="icons">
-                    <div class="figma"><img src="images/git.png" alt="Git"></div>
-                    <div class="Xd"><img src="images/vscode.png" alt="Vs code"></div>
-                    <div class="canva"><img src="images/webflow.png" alt="Webflow"></div>
-                    <div class="editorX"><img src="images/editorx.png" alt="EditorX"></div>
+                    <div class="figma"><img src="images/git.png" width="62em" alt="Git"></div>
+                    <div class="Xd"><img src="images/vscode.png" width="62em" alt="Vs code"></div>
+                    <div class="canva"><img src="images/webflow.png" width="62em" alt="Webflow"></div>
+                    <div class="editorX"><img src="images/editorx.png" width="62em" alt="EditorX"></div>
                 </div> 
             </div>      
         </div>
