--- a/e-com.html
+++ b/e-com.html
@@ -11,7 +11,36 @@
 <body>
     <header>
         <div class="dark-mode">
-            <a href="/Design/e-comwhite.html"><img src="/images/On.svg" alt="Dark mode"></a>
+            <a href="/Design/homewhite.html">
+                <svg width="48" height="30" viewBox="0 0 58 36" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <rect width="56" height="32" rx="16" fill="white"/>
+                    <g filter="url(#filter0_ddd_969_13524)">
+                    <rect x="26" y="2" width="28" height="28" rx="14" fill="#0A0A0A"/>
+                    </g>
+                    <path fill-rule="evenodd" clip-rule="evenodd" d="M45.9562 19.1359C44.4234 18.8673 42.8947 17.7416 41.9736 16.0223C40.8847 13.9896 40.9628 11.7204 42.0142 10.2794C42.122 10.1318 42.24 9.99276 42.368 9.86362C42.6149 9.61455 42.5435 9.14979 42.1963 9.09307C41.9699 9.05608 41.7399 9.02981 41.5067 9.01481C41.354 9.00499 41.2 9 41.0447 9C37.154 9 34 12.134 34 16C34 19.866 37.154 23 41.0447 23C43.2587 23 45.2342 21.9852 46.5256 20.3981C46.6724 20.2178 46.8103 20.0301 46.9387 19.8356C47.1217 19.5585 46.8679 19.2066 46.5345 19.1961C46.3425 19.19 46.1493 19.1697 45.9562 19.1359Z" stroke="white" stroke-width="1.5"/>
+                    <defs>
+                    <filter id="filter0_ddd_969_13524" x="22" y="0" width="36" height="36" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                    <feFlood flood-opacity="0" result="BackgroundImageFix"/>
+                    <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"/>
+                    <feOffset dy="1"/>
+                    <feGaussianBlur stdDeviation="1.5"/>
+                    <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.1 0"/>
+                    <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_969_13524"/>
+                    <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"/>
+                    <feOffset dy="1"/>
+                    <feGaussianBlur stdDeviation="1"/>
+                    <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.1 0"/>
+                    <feBlend mode="normal" in2="effect1_dropShadow_969_13524" result="effect2_dropShadow_969_13524"/>
+                    <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"/>
+                    <feOffset dy="2"/>
+                    <feGaussianBlur stdDeviation="2"/>
+                    <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.1 0"/>
+                    <feBlend mode="normal" in2="effect2_dropShadow_969_13524" result="effect3_dropShadow_969_13524"/>
+                    <feBlend mode="normal" in="SourceGraphic" in2="effect3_dropShadow_969_13524" result="shape"/>
+                    </filter>
+                    </defs>
+                </svg>        
+            </a>
         </div>
         <nav>
             <svg class="close" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -75,7 +104,7 @@
                 made easy with fast payments included.</P>
         </div>
         <div class="image">
-            <img src="/images/meet mya.svg" alt="home page">
+            <img src="images/meet mya(black).png" width="1120" height="600" alt="home page">
         </div>
     </section>
     <section class="expectation">
@@ -85,7 +114,7 @@
     </section>
     <section class="return-refund">
         <div class="left">
-            <img src="/images/return/refund mobile.svg" alt="">
+            <img src="images/refund mobile.png" width="428" height="686" alt="">
         </div>
         <div class="right">
             <div class="txtwrap">
@@ -129,9 +158,9 @@
             </div>
         </div>
         <div class="right">
-            <img src="/images/tracking mobile.svg" alt="">
+            <img src="images/tracking mobile.png" width="428" height="686" alt="">
         </div>
-    </section>
+    </section>  
     <section class="objective">
         <h3 class="maintxt">Product Objective</h3>
         <p class="bodytxt">Increasing Sales: The primary objective of this app is to drive sales and increase revenue. The app is designed to encourage customers to make purchases by showcasing the most effective skin care products, offering discounts and promotions, and providing easy payment options.</p>
@@ -145,35 +174,35 @@
         </div>
         <div class="process-cards">
             <div class="empathise">
-                <img src="/images/Empathy.svg" alt="">
+                <img src="images/Empathy.png" width="182" alt="">
                 <div class="empathisetext">
                    <p class="maintext">Empathise</p>
                    <p class="bodytxt14">Understanding the product users and what they need and their expectations about buying beauty products online.</p>
                 </div>
             </div>
             <div class="Define">
-                <img src="/images/Define.svg" alt="">
+                <img src="images/Define.png" width="182" alt="">
                 <div class="Definetext">
                    <p class="maintext">Define</p>
                    <p class="bodytxt14">Analyse user expectations and create a user persona to highlight users most frustrating encounters using an e-commerce application.</p>
                 </div>
             </div>
             <div class="Ideate">
-                <img src="/images/Ideate.svg" alt="">
+                <img src="images/Ideate.png" width="182" alt="">
                 <div class="Ideatetext">
                    <p class="maintext">Ideate</p>
                    <p class="bodytxt14">Brainstorming the defined solutions in a the best possible implimentation method. Information architecture, sketching and  wireframing.</p>
                 </div>
             </div>
             <div class="Prototype">
-                <img src="/images/Prototype.svg" alt="">
+                <img src="images/Prototype.png" width="182" alt="">
                 <div class="Prototypetext">
                    <p class="maintext">Prototype</p>
                    <p class="bodytxt14">Low fidelity designs and high fidelity designs to visualize the product expectations. Final prototyping for team collaboration and structuring page layout.  </p>
                 </div>
             </div>
             <div class="Test">
-                <img src="/images/Test.svg" alt="">
+                <img src="images/Test.png" width="182" alt="">
                 <div class="testtext">
                    <p class="maintext">Test</p>
                    <p class="bodytxt14">Usability testing and feedback with the developers and stockholders.</p>
@@ -183,7 +212,7 @@
     </section>
     <section class="checkout-payment">
         <div class="left">
-            <img src="/images/checkout payment mobile.svg" alt="">
+            <img src="images/checkout mobile.png" width="632" height="624" alt="">
         </div>
         <div class="right">
             <div class="txtwrap">
@@ -209,17 +238,71 @@
             <p class="maintxt">Competitive analysis</p>
             <p class="bodytxt">The first step for an e-commerce skincare app was to make an examination and evaluation of the competing apps in the same market. The goal of this analysis is to identify the strengths and weaknesses of each competitor, as well as opportunities and threats they pose to the success of the e-commerce skincare app. </p>
         </div>
-        <div class="comp-image"><img src="images/mya competitive anal blkbck.svg" alt=""></div>
+        <div class="comp-image"><img src="images/mya competitive analysis(black).png" width="1000" alt=""></div>
     </section>
     <section class="persona">
-        <img src="images/User Journey Map - Persona (blckbck).svg" alt="">
+        <div class="Left">
+            <div class="wrapper">
+                <p class="maintext">User Persona</p>
+                <p class="bodytxt">A personalized user persona to help guide MYA product design based on facts and a deeper understanding of behaviors. The relatable fictional character provides, invaluable insight into what customers want from products. Also, made use of them for iteration during alpha and beta testing, so as to give users an exceptional experience.</p>
+            </div>
+            <div class="info">
+                <div class="left">
+                    <div class="txt-wrap1">
+                        <p class="title">Name</p>
+                        <p class="body">Joan</p>
+                    </div>
+                    <div class="txt-wrap2">
+                        <p class="title">Age</p>
+                        <p class="body">24</p>
+                    </div>
+                </div>
+                <div class="right">
+                    <div class="txt-wrap3">
+                        <p class="title">Location</p>
+                        <p class="body">Lagos, Nigeria</p>
+                    </div>
+                    <div class="txt-wrap4">
+                        <p class="title">Occupation</p>
+                        <p class="body">Influencer</p>
+                    </div>
+                </div>
+            </div>
+            <div class="wrapper2">
+                <p class="maintext">Short Story</p>
+                <p class="bodytxt">Johan is a 24-year-old working professional model who spends most of her time working out and creating contents. She needs a skincare e-commerce app that offers a variety of beauty products suitable for her skin type. However, with her busy schedule, she finds it difficult to go shopping for skincare products. Her experience with purchasing skin products from different ecommerce sites hasn’t been the best. Some of them would rarely restock, while others get her orders mixed up and had no reliable return policy, leading to disappointment and frustration.</p>
+            </div>
+            <div class="Lists">
+                <div class="list1">
+                    <p class="bodytxt">Pain points</p>
+                    <ul class="list">
+                        <li>She finds it Difficult in finding products that are suitable for her skin type.</li>
+                        <li>Getting an image of the items paid for before packing and delivery to be sure what you ordered is what you get.</li>
+                        <li>Lack of time to visit physical stores.</li>
+                        <li>Unavailability of a favorite product.</li>
+                        <li>Authenticity of product when buying online. </li>
+                        <li>Inconvenient return policies.</li>       
+                    </ul>
+                </div>
+                <div class="list2">
+                    <p class="bodytxt">Goals</p>
+                    <ul class="list">
+                        <li>She wants an e-commerce skincare app that is easy to use, has a wide selection of products to choose from, and provides accurate delivery information.</li>
+                        <li>She wants the app to be user-friendly and intuitive, allowing her to quickly and easily browse through different styles, filter options based on her preferences, and make a purchase with just a few taps on her phone. </li>         
+                    </ul>
+                </div>   
+            </div>
+        </div> 
+        <div class="right">
+            <img src="images/persona image(black).png" alt="">
+        </div>  
     </section>
     <section class="infor-archi">
         <div class="textwrapper">
             <p class="maintxt">Information Architecture</p>
             <p class="bodytxt">The goal is to create a user-friendly and intuitive interface that allows users to find and purchase shoes quickly and easily, with the structural design of organizing and labeling digital content to support ease of use, navigation, and retrieval of information.</p>
         </div>
-        <div class="infor-archimg"><img src="images/mya Information arti (blckback).svg" alt=""></div>
+        <div class="infor-archimg"><img src="images/info-arch(black).png" alt=""></div>
     </section>
     <section class="sketch">
         <div class="textwrapper">
@@ -227,29 +310,29 @@
             <p class="bodytxt">From the information architecture formed, I sketched out an initial design to guide the mobile app wireframe and after i was satisfied with the final sketch, this was the final result: </p>
         </div>
         <div class="sketches">
-            <img src="images/mya sketch (blckcack).svg" alt="">
+            <img src="images/mya sketch(black).png" alt="">
         </div>
     </section>
     <section class="checkout">
         <p class="maintxt">Desktop Checkout Screens</p>
-        <div class="checkoutimg"><img src="images/checkout screens (blckback).svg" alt=""></div>
+        <div class="checkoutimg"><img src="images/checkout screens (blckback).png" alt=""></div>
     </section>
     <section class="style-guide">
         <h1 class="header">Style Guide</h1>
         <div class="color-palette">
             <h3 class="maintxt">Color palette</h3>
-            <div class="colorpalette"><img src="/images/mya Brand Color.svg" alt=""></div>
+            <div class="colorpalette"><img src="images/mya Brand Color" alt=""></div>
         </div>
         <div class="typography">
             <h3 class="maintxt">Typography</h3>
-            <div class="font"><img src="/images/mya typography font(blackbck).svg" alt=""></div>
-            <div class="fontweight"><img src="/images/Magenta typography weight.svg" alt=""></div>
+            <div class="font"><img src="images/Magenta typography font.png" alt=""></div>
+            <div class="fontweight"><img src="images/Magenta typography weight.png" alt=""></div>
         </div>
         <div class="Icon">
             <h3 class="maintxt">Iconography</h3>
             <div class="iconwrap">
-                <div class="font"><p class="outline">Outline</p><img src="/images/Outline icon black.svg" alt=""></div>
-                <div class="fontweight"><p class="bold">Bold</p><img src="/images/Bold icon black.svg" alt=""></div>
+                <div class="font"><p class="outline">Outline</p><img src="images/Outline icon black.png" alt=""></div>
+                <div class="fontweight"><p class="bold">Bold</p><img src="images/Bold icon black.png" alt=""></div>
             </div>
         </div>
     </section>
