--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <path d="M20 10L10 20M10 10L20 20" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
             </svg>
             <ul>
-                <li><a href="/Design/home.html" class="active">Home</a></li>
+                <li><a href="/Design/home.html" class="active">Homee</a></li>
                 <li><a href="/Design/experienceblack.html" class="active">Experience</a></li>
                 <li><a href="#Meet-me" class="active">Meet Me'</a></li>
                 <li class="dropdown">
